@@ -6,6 +6,8 @@ ChangeLog
 
 GIT HEAD
 
+* Added application keywords to freedesktop.org's AppData.
+
 * Prevent x11extras module from use on non-X11/Unix plaforms.
 
 * Messages standard output capture has been improved again, now
